# 3dbag-pipeline

./: .dockerignore  .env  .gitignore  .gitmodules  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE-MIT  MANIFEST.in  NOTICE  README.md  RELEASE_NOTES.md  build-tools.sh  gen_ref_pages_common.py  index.html  justfile  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements_dev.txt  requirements_docs.txt  ruff.toml  sitemap.xml  tools-build.sh  tools-test.sh  tox.ini
.github/hooks/: pre-commit
.github/scripts/: parse_changelog.py
.github/workflows/: build-docker-develop.yaml  build-docker-tools.yaml  documentation.yaml  integration-tests.yaml  lint-and-formatting.yaml  lint-format-unit-tests.yaml  release.yaml  run_unit_tests.yaml  test.yaml  unit-tests.yaml
SOURCE_DATASETS/: index.html
deployment/: index.html  pyproject.toml
deployment/docker/: index.html
deployment/gilfoyle/: dagster.yaml  workspace.yaml
development/: index.html
development/code/: index.html
development/documentation/: index.html
development/guidelines/: index.html
docker/: .env  README.md  build_image.sh  compose.yaml  docker-compose.yaml  index.html
docker/3dbag-sample-data/: Dockerfile  README.md  baseregisters.sh  docker-entrypoint-copydata.sh  docker-entrypoint.sh  test.dockerfile
docker/dagster/: Dockerfile  dagster.yaml  requirements.txt  workspace.yaml
docker/pipeline/: Dockerfile  bag3d-core.dockerfile  bag3d-floors-estimation.dockerfile  bag3d-party-walls.dockerfile  bag3d_core.dockerfile  bag3d_floors_estimation.dockerfile  bag3d_party_walls.dockerfile
docker/postgres/: Dockerfile  entrypoint.sh
docker/tools/: .env  Dockerfile  requirements.txt
docs/: SOURCE_DATASETS.md  development.md  index_common.md  index_core.md  index_floors_estimation.md  index_party_walls.md  production.md  source_datasets.md
docs/deployment/: docker.md  index.md
docs/development/: code.md  documentation.md  guidelines.md  index.md
experiments/: README.md
experiments/copc-experiment/: README.md  analysis.Rmd  analysis.nb.html  copc.py  environment.yaml  flat_tiles.py  pdal_convert.sh  pdal_merge_convert.sh  pdal_merge_copc.json  pdal_merge_tmp.json  selected_ahn.csv  selected_ahn.qmd  symlink_laz_files.sh
experiments/dagster_grpc/: README.md  dagster.yaml  workspace.yaml
index_common/: index.html
index_core/: index.html
index_floors_estimation/: index.html
index_party_walls/: index.html
production/: index.html
reference/SUMMARY/: index.html
scripts/: README.md  backfill-status.py  bag_per_province.sql  monitor-code-location.py  reload-code-location.py  roofer-logs-parse-debug.py  roofer-logs-parse.py  roofer-logs-plot.py
scripts/symlink_laz_per_province/: requirements.txt  (+1 more)
search/: search_index.json
source_datasets/: index.html
tests/: conftest.py  test_assets_ahn.py  test_assets_bag.py  test_assets_input.py  test_assets_sample.py  test_assets_top10nl.py  test_core.py  test_repository.py  test_resources.py  test_sensors.py  test_simple_for_testing.py
venvs/: README.md
xsd/: README.md
(+61 files in other folders)
