[project]
name = "3dbag-pipeline"
version = "2024.12.16"
description = "Development requirements of the 3DBAG pipeline"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
docs = [
    "markdown-include~=0.8.1",
    "mkdocs-material~=9.5.48",
    "mkdocs~=1.6.1",
    "mkdocs-gen-files~=0.5.0",
    "mkdocs-literate-nav~=0.6.1",
    "mkdocs-section-index~=0.3.9",
    "mkdocstrings[python]~=0.27.0",
    "bag3d-common",
]
lint = [
    "ruff~=0.8.2",
]
dev = [
    "dagster~=1.9.4",
    "dagster-webserver~=1.9.4",
    "dagster-postgres~=0.25.4",
    "pytest-dotenv~=0.5.2",
    "bumpver~=2024.1130",
]

[tool.uv]
default-groups = ["dev", "docs", "lint"]

[tool.uv.sources]
bag3d-common = { path = "packages/common" }

[tool.ruff]
include = ["packages/*/pyproject.toml", "scripts/*/*.py"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.bumpver]
current_version = "2024.12.16"
version_pattern = "YYYY.MM.DD"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ".github/hooks/pre-commit"
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"packages/common/pyproject.toml" = [
    'version = "{version}"',
]
"packages/core/pyproject.toml" = [
    'version = "{version}"',
]
"packages/floors_estimation/pyproject.toml" = [
    'version = "{version}"',
]
"packages/party_walls/pyproject.toml" = [
    'version = "{version}"',
]
